--- a/thingstodo/backend/package.json
+++ b/thingstodo/backend/package.json
@@ -17,6 +17,9 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.5.0"
   }
 }
